major command refactor