@@ -9,12 +9,14 @@ import org.bukkit.configuration.file.YamlConfiguration;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 public final class DeleteKitCommand implements TabExecutor {
 
     private final AirCore plugin;
+    private static final String PERMISSION = "aircore.command.deletekit";
 
     public DeleteKitCommand(AirCore plugin) {
         this.plugin = plugin;
@@ -26,42 +28,57 @@ public final class DeleteKitCommand implements TabExecutor {
             sender.sendMessage("Only players may use this command");
             return true;
         }
-        if (!player.hasPermission("aircore.command.deletekit")) {
-            MessageUtil.send(player, "errors.no-permission", Map.of("permission", "aircore.command.deletekit"));
+
+        if (!player.hasPermission(PERMISSION)) {
+            MessageUtil.send(player, "errors.no-permission", Map.of("permission", PERMISSION));
             return true;
         }
+
+        String usage = plugin.commandConfig().getUsage("delkit", label);
+
         if (args.length < 1) {
-            MessageUtil.send(player, "errors.incorrect-usage", Map.of("usage", plugin.config().getUsage("delkit", label)));
+            MessageUtil.send(player, "errors.incorrect-usage", Map.of("usage", usage));
             return true;
         }
+
         if (plugin.config().errorOnExcessArgs() && args.length > 1) {
-            MessageUtil.send(player, "errors.too-many-arguments", Map.of("usage", plugin.config().getUsage("delkit", label)));
+            MessageUtil.send(player, "errors.too-many-arguments", Map.of("usage", usage));
             return true;
         }
+
         String kitName = args[0].toLowerCase();
         YamlConfiguration kitsConfig = plugin.kit().kits().getConfig();
+
         if (!kitsConfig.contains("kits." + kitName)) {
             MessageUtil.send(player, "kits.errors.not-found", Map.of());
             return true;
         }
+
         kitsConfig.set("kits." + kitName, null);
         plugin.kit().kits().saveConfig();
-        plugin.database().executeAsync("DELETE FROM player_kits WHERE kit = ?", ps -> ps.setString(1, kitName.toLowerCase()));
+
+        plugin.database().executeAsync("DELETE FROM player_kits WHERE kit = ?", ps ->
+                ps.setString(1, kitName));
+
         MessageUtil.send(player, "kits.management.deleted", Map.of("name", kitName));
         return true;
     }
 
     @Override
     public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command cmd, @NotNull String label, String @NotNull [] args) {
-        if (!(sender instanceof Player player) || !player.hasPermission("aircore.command.deletekit")) return List.of();
+        if (!(sender instanceof Player player) || !player.hasPermission(PERMISSION)) return Collections.emptyList();
+
         if (args.length == 1) {
             var section = plugin.kit().kits().getConfig().getConfigurationSection("kits");
-            if (section == null) return List.of();
+            if (section == null) return Collections.emptyList();
+
+            String input = args[0].toLowerCase();
             return section.getKeys(false).stream()
-                    .filter(name -> name.toLowerCase().startsWith(args[0].toLowerCase()))
+                    .filter(name -> name.toLowerCase().startsWith(input))
                     .limit(20)
                     .toList();
         }
-        return List.of();
+
+        return Collections.emptyList();
     }
 }
