@@ -3,6 +3,7 @@ package com.ftxeven.aircore.core.module.teleport.command;
 import com.ftxeven.aircore.AirCore;
 import com.ftxeven.aircore.util.MessageUtil;
 import org.bukkit.Bukkit;
+import org.bukkit.Location;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabExecutor;
@@ -10,70 +11,74 @@ import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 public final class TpHereCommand implements TabExecutor {
 
     private final AirCore plugin;
+    private static final String PERM_BASE = "aircore.command.tphere";
+    private static final String PERM_ALL = "aircore.command.tphere.all";
 
     public TpHereCommand(AirCore plugin) {
         this.plugin = plugin;
     }
 
     @Override
-    public boolean onCommand(@NotNull CommandSender sender,
-                             @NotNull Command cmd,
-                             @NotNull String label,
-                             String @NotNull [] args) {
+    public boolean onCommand(@NotNull CommandSender sender, @NotNull Command cmd, @NotNull String label, String @NotNull [] args) {
+        String selectorAll = plugin.commandConfig().getSelector("global.all", "@a");
 
         if (!(sender instanceof Player player)) {
-            sender.sendMessage("Only players may use this command");
+            sender.sendMessage("Only players may use this command.");
             return true;
         }
 
-        if (!player.hasPermission("aircore.command.tphere")) {
-            MessageUtil.send(player, "errors.no-permission", Map.of("permission", "aircore.command.tphere"));
+        if (!player.hasPermission(PERM_BASE)) {
+            MessageUtil.send(player, "errors.no-permission", Map.of("permission", PERM_BASE));
             return true;
         }
+
+        String usage = plugin.commandConfig().getUsage("tphere", label);
 
         if (args.length < 1) {
-            MessageUtil.send(player, "errors.incorrect-usage", Map.of("usage", plugin.config().getUsage("tphere", label)));
+            MessageUtil.send(player, "errors.incorrect-usage", Map.of("usage", usage));
             return true;
         }
 
         if (plugin.config().errorOnExcessArgs() && args.length > 1) {
-            MessageUtil.send(player, "errors.too-many-arguments", Map.of("usage", plugin.config().getUsage("tphere", label)));
+            MessageUtil.send(player, "errors.too-many-arguments", Map.of("usage", usage));
             return true;
         }
 
-        String targetName = args[0];
+        String targetArg = args[0];
 
-        if (targetName.equalsIgnoreCase("@a")) {
+        if (targetArg.equalsIgnoreCase(selectorAll)) {
+            if (!player.hasPermission(PERM_ALL)) {
+                MessageUtil.send(player, "errors.no-permission", Map.of("permission", PERM_ALL));
+                return true;
+            }
             handleTeleportAll(player);
             return true;
         }
 
-        Player target = Bukkit.getPlayerExact(targetName);
+        Player target = Bukkit.getPlayerExact(targetArg);
         if (target == null) {
-            MessageUtil.send(player, "errors.player-not-found", Map.of("player", targetName));
+            MessageUtil.send(player, "errors.player-not-found", Map.of("player", targetArg));
             return true;
         }
 
         plugin.core().teleports().teleport(target, player.getLocation());
         MessageUtil.send(player, "teleport.direct.player-to-self", Map.of("player", target.getName()));
-
         return true;
     }
 
     private void handleTeleportAll(Player player) {
-        if (!player.hasPermission("aircore.command.tphere.all")) {
-            MessageUtil.send(player, "errors.no-permission", Map.of("permission", "aircore.command.tphere.all"));
-            return;
-        }
+        final Location destination = plugin.core().teleports().adjustToCenter(player.getLocation());
 
-        List<? extends Player> others = Bukkit.getOnlinePlayers().stream()
+        List<Player> others = Bukkit.getOnlinePlayers().stream()
                 .filter(p -> !p.equals(player))
+                .map(p -> (Player) p)
                 .toList();
 
         if (others.isEmpty()) {
@@ -82,33 +87,31 @@ public final class TpHereCommand implements TabExecutor {
         }
 
         for (Player other : others) {
-            plugin.core().teleports().teleport(other, player.getLocation());
+            plugin.core().teleports().teleport(other, destination);
         }
 
         MessageUtil.send(player, "teleport.direct.everyone-to-self", Map.of());
     }
 
     @Override
-    public List<String> onTabComplete(@NotNull CommandSender sender,
-                                      @NotNull Command cmd,
-                                      @NotNull String label,
-                                      @NotNull String @NotNull [] args) {
-
-        if (args.length != 1) return List.of();
+    public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command cmd, @NotNull String label, String @NotNull [] args) {
+        if (!(sender instanceof Player player) || args.length != 1) return Collections.emptyList();
+        if (!player.hasPermission(PERM_BASE)) return Collections.emptyList();
 
         String input = args[0].toLowerCase();
-        List<String> completions = new ArrayList<>();
-
-        if (sender.hasPermission("aircore.command.tphere.all") && "@a".startsWith(input)) {
-            completions.add("@a");
-        }
+        String selectorAll = plugin.commandConfig().getSelector("global.all", "@a");
+        List<String> suggestions = new ArrayList<>();
 
         Bukkit.getOnlinePlayers().stream()
                 .map(Player::getName)
-                .filter(name -> name.toLowerCase().startsWith(input))
+                .filter(n -> n.toLowerCase().startsWith(input))
                 .limit(20)
-                .forEach(completions::add);
+                .forEach(suggestions::add);
 
-        return completions;
+        if (player.hasPermission(PERM_ALL) && selectorAll.toLowerCase().startsWith(input)) {
+            suggestions.add(selectorAll);
+        }
+
+        return suggestions;
     }
 }
