@@ -12,96 +12,92 @@ import org.bukkit.command.TabExecutor;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.UUID;
 
 public final class TpaCommand implements TabExecutor {
 
     private final AirCore plugin;
+    private static final String PERM_BASE = "aircore.command.tpa";
 
     public TpaCommand(AirCore plugin) {
         this.plugin = plugin;
     }
 
     @Override
-    public boolean onCommand(@NotNull CommandSender sender,
-                             @NotNull Command cmd,
-                             @NotNull String label,
-                             String @NotNull [] args) {
+    public boolean onCommand(@NotNull CommandSender sender, @NotNull Command cmd, @NotNull String label, String @NotNull [] args) {
 
         if (!(sender instanceof Player player)) {
             sender.sendMessage("Only players may use this command");
             return true;
         }
 
-        if (!player.hasPermission("aircore.command.tpa")) {
-            MessageUtil.send(player, "errors.no-permission",
-                    Map.of("permission", "aircore.command.tpa"));
+        if (!player.hasPermission(PERM_BASE)) {
+            MessageUtil.send(player, "errors.no-permission", Map.of("permission", PERM_BASE));
             return true;
         }
 
+        String usage = plugin.commandConfig().getUsage("tpa", label);
+
         if (args.length < 1) {
-            MessageUtil.send(player, "errors.incorrect-usage",
-                    Map.of("usage", plugin.config().getUsage("tpa", label)));
+            MessageUtil.send(player, "errors.incorrect-usage", Map.of("usage", usage));
             return true;
         }
 
         if (plugin.config().errorOnExcessArgs() && args.length > 1) {
-            MessageUtil.send(player, "errors.too-many-arguments",
-                    Map.of("usage", plugin.config().getUsage("tpa", label)));
+            MessageUtil.send(player, "errors.too-many-arguments", Map.of("usage", usage));
             return true;
         }
 
         Player target = Bukkit.getPlayerExact(args[0]);
         if (target == null) {
-            MessageUtil.send(player, "errors.player-not-found", Map.of("player", args[0]));
+            MessageUtil.send(player, "errors.player-not-found", Map.of());
             return true;
         }
 
-        if (target.equals(player)) {
+        UUID playerId = player.getUniqueId();
+        UUID targetId = target.getUniqueId();
+
+        if (targetId.equals(playerId)) {
             MessageUtil.send(player, "teleport.requests.error-self", Map.of());
             return true;
         }
 
-        if (plugin.core().blocks().isBlocked(target.getUniqueId(), player.getUniqueId())) {
-            MessageUtil.send(player, "utilities.blocking.error-blocked-by",
-                    Map.of("player", target.getName()));
+        if (plugin.core().blocks().isBlocked(targetId, playerId)) {
+            MessageUtil.send(player, "utilities.blocking.error-blocked-by", Map.of("player", target.getName()));
             return true;
         }
 
-        boolean bypassToggle = player.hasPermission("aircore.bypass.teleport.toggle");
-        if (!bypassToggle && !plugin.core().toggles().isEnabled(target.getUniqueId(), ToggleService.Toggle.TELEPORT)) {
-            MessageUtil.send(player, "teleport.requests.error-disabled",
-                    Map.of("player", target.getName()));
+        if (!player.hasPermission("aircore.bypass.teleport.toggle") &&
+                !plugin.core().toggles().isEnabled(targetId, ToggleService.Toggle.TELEPORT)) {
+            MessageUtil.send(player, "teleport.requests.error-disabled", Map.of("player", target.getName()));
             return true;
         }
 
         int cooldownSeconds = plugin.config().teleportRequestCooldown();
-        if (cooldownSeconds > 0 &&
-                plugin.teleport().cooldowns().isOnCooldown(player.getUniqueId(), target.getUniqueId(), cooldownSeconds)) {
-            long remaining = plugin.teleport().cooldowns().getRemaining(player.getUniqueId(), target.getUniqueId(), cooldownSeconds);
-            MessageUtil.send(player, "teleport.requests.error-cooldown",
-                    Map.of("time", TimeUtil.formatSeconds(plugin, remaining)));
+        if (cooldownSeconds > 0 && plugin.teleport().cooldowns().isOnCooldown(playerId, targetId, cooldownSeconds)) {
+            long remaining = plugin.teleport().cooldowns().getRemaining(playerId, targetId, cooldownSeconds);
+            MessageUtil.send(player, "teleport.requests.error-cooldown", Map.of("time", TimeUtil.formatSeconds(plugin, remaining)));
             return true;
         }
 
         int expireSeconds = plugin.config().teleportRequestExpireTime();
-        long expiryTime = expireSeconds > 0
-                ? System.currentTimeMillis() + (expireSeconds * 1000L)
-                : Long.MAX_VALUE;
+        long expiryTime = expireSeconds > 0 ? System.currentTimeMillis() + (expireSeconds * 1000L) : Long.MAX_VALUE;
 
         plugin.teleport().requests().addRequest(
-                player.getUniqueId(), player.getName(),
-                target.getUniqueId(), target.getName(),
+                playerId, player.getName(),
+                targetId, target.getName(),
                 expiryTime, RequestService.RequestType.TPA
         );
 
-        plugin.teleport().cooldowns().mark(player.getUniqueId(), target.getUniqueId());
+        plugin.teleport().cooldowns().mark(playerId, targetId);
 
         MessageUtil.send(player, "teleport.requests.tpa-to", Map.of("player", target.getName()));
         MessageUtil.send(target, "teleport.requests.tpa-from", Map.of("player", player.getName()));
 
-        if (plugin.utility().afk().isAfk(target.getUniqueId())) {
+        if (plugin.utility().afk().isAfk(targetId)) {
             MessageUtil.send(player, "utilities.afk.interaction-notify", Map.of("player", target.getName()));
         }
 
@@ -109,13 +105,11 @@ public final class TpaCommand implements TabExecutor {
     }
 
     @Override
-    public List<String> onTabComplete(@NotNull CommandSender sender,
-                                      @NotNull Command cmd,
-                                      @NotNull String label,
-                                      String @NotNull [] args) {
-        if (!(sender instanceof Player) || args.length != 1) return List.of();
-        String input = args[0].toLowerCase();
+    public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command cmd, @NotNull String label, String @NotNull [] args) {
+        if (!(sender instanceof Player player) || args.length != 1) return Collections.emptyList();
+        if (!player.hasPermission(PERM_BASE)) return Collections.emptyList();
 
+        String input = args[0].toLowerCase();
         return Bukkit.getOnlinePlayers().stream()
                 .map(Player::getName)
                 .filter(name -> name.toLowerCase().startsWith(input))
