@@ -12,49 +12,58 @@ import org.bukkit.command.TabExecutor;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 public final class TpaHereCommand implements TabExecutor {
 
     private final AirCore plugin;
+    private static final String PERM_BASE = "aircore.command.tpahere";
+    private static final String PERM_ALL = "aircore.command.tpahere.all";
 
     public TpaHereCommand(AirCore plugin) {
         this.plugin = plugin;
     }
 
     @Override
-    public boolean onCommand(@NotNull CommandSender sender,
-                             @NotNull Command cmd,
-                             @NotNull String label,
-                             String @NotNull [] args) {
+    public boolean onCommand(@NotNull CommandSender sender, @NotNull Command cmd, @NotNull String label, String @NotNull [] args) {
+        String selectorAll = plugin.commandConfig().getSelector("global.all", "@a");
 
         if (!(sender instanceof Player player)) {
             sender.sendMessage("Only players may use this command");
             return true;
         }
 
-        if (!player.hasPermission("aircore.command.tpahere")) {
-            MessageUtil.send(player, "errors.no-permission", Map.of("permission", "aircore.command.tpahere"));
+        if (!player.hasPermission(PERM_BASE)) {
+            MessageUtil.send(player, "errors.no-permission", Map.of("permission", PERM_BASE));
             return true;
         }
+
+        String usage = plugin.commandConfig().getUsage("tpahere", label);
 
         if (args.length < 1) {
-            MessageUtil.send(player, "errors.incorrect-usage", Map.of("usage", plugin.config().getUsage("tpahere", label)));
+            MessageUtil.send(player, "errors.incorrect-usage", Map.of("usage", usage));
             return true;
         }
 
-        String targetName = args[0];
+        if (plugin.config().errorOnExcessArgs() && args.length > 1) {
+            MessageUtil.send(player, "errors.too-many-arguments", Map.of("usage", usage));
+            return true;
+        }
 
-        if (targetName.equalsIgnoreCase("@a")) {
+        String targetArg = args[0];
+
+        if (targetArg.equalsIgnoreCase(selectorAll)) {
+            if (!player.hasPermission(PERM_ALL)) {
+                MessageUtil.send(player, "errors.no-permission", Map.of("permission", PERM_ALL));
+                return true;
+            }
             handleTpaHereAll(player);
             return true;
         }
 
-        Player target = Bukkit.getPlayerExact(targetName);
+        Player target = Bukkit.getPlayerExact(targetArg);
         if (target == null) {
-            MessageUtil.send(player, "errors.player-not-found", Map.of("player", targetName));
+            MessageUtil.send(player, "errors.player-not-found", Map.of("player", targetArg));
             return true;
         }
 
@@ -72,21 +81,18 @@ public final class TpaHereCommand implements TabExecutor {
     }
 
     private void handleTpaHereAll(Player player) {
-        if (!player.hasPermission("aircore.command.tpahere.all")) {
-            MessageUtil.send(player, "errors.no-permission", Map.of("permission", "aircore.command.tpahere.all"));
-            return;
-        }
+        List<Player> others = Bukkit.getOnlinePlayers().stream()
+                .filter(p -> !p.equals(player))
+                .map(p -> (Player) p)
+                .toList();
 
-        List<Player> targets = new ArrayList<>(Bukkit.getOnlinePlayers());
-        targets.remove(player);
-
-        if (targets.isEmpty()) {
+        if (others.isEmpty()) {
             MessageUtil.send(player, "errors.no-players-online", Map.of());
             return;
         }
 
         int sentCount = 0;
-        for (Player target : targets) {
+        for (Player target : others) {
             if (canReceiveRequest(player, target, true)) {
                 executeRequest(player, target);
                 sentCount++;
@@ -96,26 +102,29 @@ public final class TpaHereCommand implements TabExecutor {
         if (sentCount > 0) {
             MessageUtil.send(player, "teleport.requests.tpahere-everyone", Map.of());
         } else {
-            MessageUtil.send(player, "teleport.requests.error-blocked", Map.of());
+            MessageUtil.send(player, "teleport.requests.error-no-valid-targets", Map.of());
         }
     }
 
     private boolean canReceiveRequest(Player player, Player target, boolean silent) {
-        if (plugin.core().blocks().isBlocked(target.getUniqueId(), player.getUniqueId())) {
+        UUID playerId = player.getUniqueId();
+        UUID targetId = target.getUniqueId();
+
+        if (plugin.core().blocks().isBlocked(targetId, playerId)) {
             if (!silent) MessageUtil.send(player, "utilities.blocking.error-blocked-by", Map.of("player", target.getName()));
             return false;
         }
 
-        boolean bypassToggle = player.hasPermission("aircore.bypass.teleport.toggle");
-        if (!bypassToggle && !plugin.core().toggles().isEnabled(target.getUniqueId(), ToggleService.Toggle.TELEPORT)) {
+        if (!player.hasPermission("aircore.bypass.teleport.toggle") &&
+                !plugin.core().toggles().isEnabled(targetId, ToggleService.Toggle.TELEPORT)) {
             if (!silent) MessageUtil.send(player, "teleport.requests.error-disabled", Map.of("player", target.getName()));
             return false;
         }
 
         int cooldownSeconds = plugin.config().teleportRequestCooldown();
-        if (cooldownSeconds > 0 && plugin.teleport().cooldowns().isOnCooldown(player.getUniqueId(), target.getUniqueId(), cooldownSeconds)) {
+        if (cooldownSeconds > 0 && plugin.teleport().cooldowns().isOnCooldown(playerId, targetId, cooldownSeconds)) {
             if (!silent) {
-                long remaining = plugin.teleport().cooldowns().getRemaining(player.getUniqueId(), target.getUniqueId(), cooldownSeconds);
+                long remaining = plugin.teleport().cooldowns().getRemaining(playerId, targetId, cooldownSeconds);
                 MessageUtil.send(player, "teleport.requests.error-cooldown", Map.of("time", TimeUtil.formatSeconds(plugin, remaining)));
             }
             return false;
@@ -144,21 +153,23 @@ public final class TpaHereCommand implements TabExecutor {
 
     @Override
     public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command cmd, @NotNull String label, String @NotNull [] args) {
-        if (!(sender instanceof Player player) || args.length != 1) return List.of();
+        if (!(sender instanceof Player player) || args.length != 1) return Collections.emptyList();
+        if (!player.hasPermission(PERM_BASE)) return Collections.emptyList();
 
         String input = args[0].toLowerCase();
-        List<String> completions = new ArrayList<>();
-
-        if (player.hasPermission("aircore.command.tpahere.all") && "@a".startsWith(input)) {
-            completions.add("@a");
-        }
+        String selectorAll = plugin.commandConfig().getSelector("global.all", "@a");
+        List<String> suggestions = new ArrayList<>();
 
         Bukkit.getOnlinePlayers().stream()
                 .map(Player::getName)
-                .filter(name -> name.toLowerCase().startsWith(input))
+                .filter(n -> n.toLowerCase().startsWith(input))
                 .limit(20)
-                .forEach(completions::add);
+                .forEach(suggestions::add);
 
-        return completions;
+        if (player.hasPermission(PERM_ALL) && selectorAll.toLowerCase().startsWith(input)) {
+            suggestions.add(selectorAll);
+        }
+
+        return suggestions;
     }
 }
